--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-track-player": "^1.2.3",
     "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
